--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "beautiful-portfolio",
- 
+  "name": "Portfolio-latest",
   "private": true,
   "version": "0.0.0",
   "type": "module",
